# plant-health-probe

./: CMakeLists.txt  LICENSE  README.md
PCB/: Drill_PTH_Through.DRL  Drill_PTH_Through_Via.DRL  Gerber_BoardOutlineLayer.GKO  Gerber_BottomLayer.GBL  Gerber_BottomSolderMaskLayer.GBS  Gerber_TopLayer.GTL  Gerber_TopSilkscreenLayer.GTO  Gerber_TopSolderMaskLayer.GTS
include/: ds18b20.h  graphics.h  lcd.h  viewmode_select.h
src/: ds18b20.c  graphics.c  lcd.c  main.c  soil_moisture_seesaw.c  viewmode_select.c
